@@ -1,6 +1,10 @@
 Release Note
 
 * current
+  * introduced --eventPickSkipDaTRI
+  * updating task status when EventPicker failed
+  * making EventPicker log available to users
+  * parsing DN when setting owner in EventPicker
   * reduced sleep interval in AdderAtlas
   * fixed datasetMgr not to delete _sub at dst:
   * fixed location registration for _sub + dst:
